[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'nameservice-runtime-wasm'
version = '1.0.0'
[dependencies.nameservice-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['nameservice-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
